sumo/tests/sumo/output/e1/errors/id_empty/errors.sumo
Error: Missing id of a e1-detector-object.
Quitting (on error).
